# data-producer-api

./: .gitattributes  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.yaml  codecov.yml  pyproject.toml  query.sql  requirements.txt  setup.py
.github/: funding.yml
.github/workflows/: CI-CD.yaml  bigquery-execute.yaml  deploy-cloud-run.yaml  deploy-image.yml  swagger-docs.yml
api/: run.py
api/adapters/: pubsub.py  test_pubsub.py
api/application/controller/: send_controller.py
api/application/services/: send_api_data.py
docs/: index.html  swagger.yaml
github/workflows/: deploy-image.yml
notebooks/: example.ipynb
pipeline/: run.py
pipeline/config/: beam_config.py
src/: app.py  app_fast_api.py  main.py  run.py
src/adapters/: pubsub.py  test_pubsub.py
src/api/: run.py
src/api/adapters/: datadog.py  datadog_adapter.py  pubsub.py  pubsub_adapter.py  secret_manager_adapter.py  test_pubsub.py
src/api/application/controller/: send_controller.py
src/api/application/ports/: get_secrets.py  send_api_data.py  send_metrics.py
src/api/application/services/: get_metrics_server_address.py  get_secret_value.py  send_api_data.py  send_metrics.py
src/api/application/use_cases/: get_metrics_server.py  send_metrics.py
src/api/application/utils/: contants.py  singleton.py
src/api/tests/: test_ping_controller.py  test_pubsub.py
src/application/controller/: ping_controller.py  send_controller.py  test_ping_controller.py
src/application/routes/: ping.py  send.py
src/application/services/: send_api_data.py
src/controller/: send_controller.py
src/pipeline/: requirements.txt
src/pipeline/config/: beam_config.py  common.py  spark_config.py
src/pipeline/dataflow/: pipeline.py
src/pipeline/dataproc/: Dockerfile  pipeline.py
src/routes/: ping.py  send.py
src/tests/: pubsub.py  test.py  test_entrypoint.py  test_ping.py  test_send.py
