[tool.poetry]
name = "data-producer-api"
version = "v1.0.0"
description = "FastAPI application for sending data to Pub/Sub, used for load testing and triggering pipelines"
authors = ["IvanildoBarauna <ivanildo.jnr@outlook.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-pubsub = "^2.23.0"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
datadog = "^0.49.1"
google-cloud-secret-manager = "^2.20.2"
coverage = "^7.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
coverage = "^7.5.4"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"